# YuMi-ROS_control_code_in_ROS

./: .gitignore  README.md
src/robot_perception/robot_vision/: camera_calibration.yaml
src/robot_perception/robot_vision/launch/: usb_cam.launch  usb_cam_with_calibration.launch
src/robot_perception/robot_vision/scripts/: object_detector.py
src/rotors_simulator/rotors_description/urdf/: component_snippets.xacro
src/yumi/: .gitignore  README.md
src/yumi/setup_ws/: setupWS.bash  setupWSVariables.bash  yumi.bash  yumi_demo.bash  yumi_server.bash
src/yumi/yumi_control/scripts/: INDINexpertV1_point2point_int.py  INDINexpertV2_point2point_cont.py  INDINexpertV3_presampling_int.py  INDINexpertV4_presampling_cont.py  JBHIexper_obstacle.py  PGY_YuMiV1.py  PGY_YuMiV2.py  PGY_Yumi.py  TII_demo.py  TII_demo_v2.py  ZZY_demo.py  ZZY_demo_v2.py  force_feedback_grip.py  joint_state (JBHIdemo).py  joint_state (postcard).py  joint_state v0429.py  joint_state(TII_demov1) .py  joint_state(TII_demov2).py  joint_state(ZZY_demov1).py  joint_state.py  joint_state_planB.py  movetest_arm.py  movetest_botharms.py  movetest_botharmsv2.py  movetest_botharmsv3.py  movetest_botharmsv4.py  (+17 more)
src/yumi/yumi_description/: CMakeLists.txt
src/yumi/yumi_moveit_config/: CMakeLists.txt  package.xml
src/yumi/yumi_startup/: CMakeLists.txt  package.xml
src/yumi/yumi_startup/launch/: visensor_demo.launch
src/yumi/yumi_startup/parameters/rovio/: rovio_cam0.yaml  rovio_cam1.yaml  rovio_equidist_cam0.yaml  rovio_equidist_cam1.yaml  rovio_filter.info  rovio_filter.info_new  rovio_test.info
(+99 files in other folders)
